--- a/photo_challenge/templates/photo_challenge/photo_challenge_list.html
+++ b/photo_challenge/templates/photo_challenge/photo_challenge_list.html
@@ -1,39 +1,36 @@
 {% extends 'main/base.html' %}
-
 {% block content %}
-
-<h1 class="text-2xl font-bold mb-4 mt-12 text-center">Photo Challenges</h1>
+<h1 class="text-2xl font-bold mb-4 mt-12 text-center">Foto-Challenges</h1>
 <div class="bg-fgreen-600 text-fgray-50 pt-12 pb-16 mt-12">
     <div class="text-fgray-50 pb-16 mb-8">
-        <h2 class="text-3xl font-normal text-white uppercase text-center mb-8">Ongoing Photo Challenges</h2>
+        <h2 class="text-3xl font-normal text-white uppercase text-center mb-8">Laufende Foto-Challenges</h2>
         <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mx-24">
             {% for challenge in upcoming_challenges %}
             <div class="bg-gray-800 p-4 flex flex-col justify-start md:justify-center items-start">
                 <h2 class="text-white text-lg font-bold">{{ challenge.name }}</h2>
-                <p class="text-gray-400 font-light mt-2"><strong class="uppercase">Challenge ends on:</strong> {{ challenge.end_date|date:"d M, Y" }}</p>
-                <a href="{% url 'photo_challenge:photo_challenge_detail' challenge.pk %}" class="mt-2 py-1 px-2 bg-forange-300 rounded-lg">Participate Now</a>
+                <p class="text-gray-400 font-light mt-2"><strong class="uppercase">Challenge endet am:</strong> {{ challenge.end_date|date:"d M, Y" }}</p>
+                <a href="{% url 'photo_challenge:photo_challenge_detail' challenge.pk %}" class="mt-2 py-1 px-2 bg-forange-300 rounded-lg">Jetzt teilnehmen</a>
             </div>
             {% empty %}
-            <div class="text-white">There are no new photo challenges. Please check back later.</div>
+            <div class="text-white">Es gibt zurzeit keine neuen Foto-Challenges. Bitte schauen Sie später noch einmal vorbei.</div>
             {% endfor %}
         </div>
     </div>
 </div>
 
-<!-- Past Challenges Section -->
+<!-- Vergangene Challenges Sektion -->
 <div class="bg-fblue-950 text-fgray pt-12 pb-16">
-    <h2 class="text-3xl font-normal text-white uppercase text-center mb-8">Past Photo Challenges</h2>
+    <h2 class="text-3xl font-normal text-white uppercase text-center mb-8">Vergangene Foto-Challenges</h2>
     <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mx-24">
         {% for challenge in past_challenges %}
         <div class="bg-gray-800 p-4 flex flex-col justify-center items-start">
             <h2 class="text-white text-lg font-bold">{{ challenge.name }}</h2>
-            <p class="text-gray-400 font-light mt-2"><strong class="uppercase">Ended on:</strong> {{ challenge.end_date|date:"d M, Y" }}</p>
-            <a href="{% url 'photo_challenge:photo_challenge_detail' challenge.pk %}" class="mt-2 py-1 px-2 bg-forange-300 rounded-lg">Results</a>
+            <p class="text-gray-400 font-light mt-2"><strong class="uppercase">Endete am:</strong> {{ challenge.end_date|date:"d M, Y" }}</p>
+            <a href="{% url 'photo_challenge:photo_challenge_detail' challenge.pk %}" class="mt-2 py-1 px-2 bg-forange-300 rounded-lg">Ergebnisse</a>
         </div>
         {% empty %}
-        <div class="text-white">There are no past photo challenges. Please check back later.</div>
+        <div class="text-white">Es gibt keine vergangenen Foto-Challenges. Bitte schauen Sie später noch einmal vorbei.</div>
         {% endfor %}
     </div>
 </div>
-
 {% endblock %}
